@@ -127,7 +127,7 @@ const int	KNOWN = 1;
 
 /* -------------------------------------------------------------------
  * Workaround for EI encode_string bug.
- * -------------------------------------------------------------------*/
+ * ------------------------------------------------------------------- */
 
 #if defined(EI_ENCODE_STRING_BUG)
 
@@ -229,7 +229,7 @@ ei_x_encode_string_fixed(ei_x_buff *x, const char *s)
 
 /* -------------------------------------------------------------------
  * Erlang port driver callbacks.
- * -------------------------------------------------------------------*/
+ * ------------------------------------------------------------------- */
 
 static ErlDrvData
 exmpp_expat_start(ErlDrvPort port, char *command)
@@ -1010,7 +1010,7 @@ expat_cb_character_data(void *user_data,
 
 /* -------------------------------------------------------------------
  * Internal functions.
- * -------------------------------------------------------------------*/
+ * ------------------------------------------------------------------- */
 
 static int
 create_parser(struct exmpp_expat_data *ed)
